feat: add get all, get one, generate pdf
