# src/dtos/request/mutation-request.ts
@@ -1,0 +1,9 @@
+export type GetMutationRequest = {
+  page: number;
+  size: number;
+  category?: string;
+  dateRange?: {
+    start: string;
+    end: string;
+  };
+};
